# backend/internal/models/user.go
@@ -8,7 +8,7 @@ type User struct {
 	AvatarKey *string
 }
 
-type UserView struct {
+type UserResponse struct {
 	ID        uuid.UUID `json:"id"`
 	Name      string    `json:"name"`
 	AvatarURL *string   `json:"profile_picture_url"`
